--- a/style.css
+++ b/style.css
@@ -149,6 +149,13 @@ h3 {
     letter-spacing: 1px;
 }
 
+main .p-end {
+    text-align: center;
+    font-size: 1.5em;
+    border-radius: 10px;
+    font-weight: bold;
+}
+
 
 footer {
     background-color: white;
